--- a/refs.bib
+++ b/refs.bib
@@ -44,3 +44,24 @@ booktitle = {Proceedings of the 8th USENIX Conference on Offensive Technologies}
 pages = {7},
 doi = {10.5555/2671293.2671300}
 }
+
+@article{carsize,
+    author = {Paul Wasielewski},
+    title = {The Effect of Car Size on Headways in Freely Flowing Freeway Traffic},
+    year = 2011,
+    publisher = {Transportation Science},
+    url = {https://doi.org/10.1287/trsc.15.4.364}
+}
+
+@Article{pathplanning,
+AUTHOR = {Zhou, Kaijun and Yu, Lingli and Long, Ziwei and Mo, Siyao},
+TITLE = {Local Path Planning of Driverless Car Navigation Based on Jump Point Search Method Under Urban Environment},
+JOURNAL = {Future Internet},
+VOLUME = {9},
+YEAR = {2017},
+NUMBER = {3},
+ARTICLE-NUMBER = {51},
+URL = {https://www.mdpi.com/1999-5903/9/3/51},
+ISSN = {1999-5903},
+DOI = {10.3390/fi9030051}
+}
