--- a/refs.bib
+++ b/refs.bib
@@ -65,3 +65,10 @@ URL = {https://www.mdpi.com/1999-5903/9/3/51},
 ISSN = {1999-5903},
 DOI = {10.3390/fi9030051}
 }
+
+@book{clrs,
+  title     = "Introduction to Algorithms",
+  authors    = {Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest, Clifford Stein},
+  year      = "2022",
+  publisher = "MIT Press",
+}
